# serializer version: 1
# name: test_core_3x1treino_seed17
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'V-Up',
            'Abd Bicicleta',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Dead Bug C/ Anilha',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'core(3)',
    }),
  ])
# ---
# name: test_costas_4x1treino_seed9
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Remada Baixa Aberta',
            'Remada Baixa Neutra',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Barra Fixa',
            'Pullover Polia',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'costas(4)',
    }),
  ])
# ---
# name: test_full_body_4treinos_seed1
  list([
    dict({
      'avisos': list([
        dict({
          'escopo': 'rotina',
          'escopo_alocacao': 'abduction',
          'escopo_demanda': 'abduction',
          'faltam': 1,
          'nivel': 'padrao',
          'nivel_alocacao': 'padrao',
          'tipo': 'incompleta',
          'treino_idx': 1,
        }),
        dict({
          'escopo': 'rotina',
          'escopo_alocacao': 'adduction',
          'escopo_demanda': 'adduction',
          'faltam': 1,
          'nivel': 'padrao',
          'nivel_alocacao': 'padrao',
          'tipo': 'incompleta',
          'treino_idx': 3,
        }),
        dict({
          'escopo': 'rotina',
          'escopo_alocacao': 'adduction',
          'escopo_demanda': 'adduction',
          'faltam': 1,
          'nivel': 'padrao',
          'nivel_alocacao': 'padrao',
          'tipo': 'incompleta',
          'treino_idx': 2,
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Agachamento Búlgaro',
            'Desenv. Halteres Uni.',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Barra Fixa',
            'Abdução Polia',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Supino Com Barra',
            'Adução Polia',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Remada Uni Polia',
            'Ponte',
          ]),
        }),
        dict({
          'label': 'E',
          'nomes': list([
            'Dead Bug C/ Anilha',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_unilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'escopo': 'abduction',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Abdução Polia',
            'Abdução quadril',
            'Desloc. Lateral c/ Band',
            'Side Clams',
          ]),
          'nivel': 'padrao',
          'qtd_obtida': 0,
          'qtd_pedida': 1,
          'tipo': 'incompleta',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Hiperextensão 45°',
            'Apoio Elevado',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Remada Baixa Aberta',
            'Copenhagen Adduction',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Desenvolvimento Smith',
            'Pallof Press',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Recuo',
            'Pullover Polia',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_unilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'escopo': 'adduction',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Adução Polia',
            'Adução quadril',
            'Copenhagen Adduction',
          ]),
          'nivel': 'padrao',
          'qtd_obtida': 0,
          'qtd_pedida': 1,
          'tipo': 'incompleta',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Hip Thrust',
            'Remada Baixa Neutra',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Desenv. Halteres Sentado',
            'Agachamento Goblet',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Puxada Supinada',
            'Hollow Hold',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Apoio Ajoelhado',
            'Side Clams',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_bilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'escopo': 'adduction',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Adução Polia',
            'Adução quadril',
            'Copenhagen Adduction',
          ]),
          'nivel': 'padrao',
          'qtd_obtida': 0,
          'qtd_pedida': 1,
          'tipo': 'incompleta',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Supino Smith Inclinado',
            'Lev. Terra Anilha',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Desenv. Landmine',
            'Desloc. Lateral c/ Band',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Remada Curvada Barra',
            'Prancha',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Passada Dos Steps',
            'Pullover Halteres',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_unilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
  ])
# ---
# name: test_full_body_4treinos_seed1_HIB2
  list([
    dict({
      'avisos': list([
        dict({
          'escopo': 'rotina',
          'escopo_alocacao': 'abduction',
          'escopo_demanda': 'abduction',
          'faltam': 1,
          'nivel': 'padrao',
          'nivel_alocacao': 'padrao',
          'tipo': 'incompleta',
          'treino_idx': 1,
        }),
        dict({
          'escopo': 'rotina',
          'escopo_alocacao': 'adduction',
          'escopo_demanda': 'adduction',
          'faltam': 1,
          'nivel': 'padrao',
          'nivel_alocacao': 'padrao',
          'tipo': 'incompleta',
          'treino_idx': 3,
        }),
        dict({
          'escopo': 'rotina',
          'escopo_alocacao': 'adduction',
          'escopo_demanda': 'adduction',
          'faltam': 1,
          'nivel': 'padrao',
          'nivel_alocacao': 'padrao',
          'tipo': 'incompleta',
          'treino_idx': 2,
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Agachamento Búlgaro',
            'Desenv. Halteres Uni.',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Barra Fixa',
            'Abdução Polia',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Supino Com Barra',
            'Adução Polia',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Remada Uni Polia',
            'Ponte',
          ]),
        }),
        dict({
          'label': 'E',
          'nomes': list([
            'Dead Bug C/ Anilha',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_unilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'escopo': 'abduction',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Abdução Polia',
            'Abdução quadril',
            'Desloc. Lateral c/ Band',
            'Side Clams',
          ]),
          'nivel': 'padrao',
          'qtd_obtida': 0,
          'qtd_pedida': 1,
          'tipo': 'incompleta',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Hiperextensão 45°',
            'Apoio Elevado',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Desenvolvimento Smith',
            'Copenhagen Adduction',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Remada Baixa Aberta',
            'Pallof Press',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Recuo',
            'Pullover Polia',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_unilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'escopo': 'adduction',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Adução Polia',
            'Adução quadril',
            'Copenhagen Adduction',
          ]),
          'nivel': 'padrao',
          'qtd_obtida': 0,
          'qtd_pedida': 1,
          'tipo': 'incompleta',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Hip Thrust',
            'Remada Baixa Neutra',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Desenv. Halteres Sentado',
            'Agachamento Goblet',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Puxada Supinada',
            'Hollow Hold',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Apoio Ajoelhado',
            'Side Clams',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_bilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'escopo': 'adduction',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Adução Polia',
            'Adução quadril',
            'Copenhagen Adduction',
          ]),
          'nivel': 'padrao',
          'qtd_obtida': 0,
          'qtd_pedida': 1,
          'tipo': 'incompleta',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Supino Smith Inclinado',
            'Lev. Terra Anilha',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Desenv. Landmine',
            'Desloc. Lateral c/ Band',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Remada Curvada Barra',
            'Prancha',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Passada Dos Steps',
            'Pullover Halteres',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_unilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
  ])
# ---
# name: test_hinge_2_squat_unilateral_2_seed19
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Lev. Terra',
            'Hip Thrust C/ Band',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Recuo C/ Barra',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Agachamento Búlgaro',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'hinge(2) + squat(2)',
    }),
  ])
# ---
# name: test_max_complexidade_baixa_seed29
  list([
    dict({
      'avisos': list([
        dict({
          'chave': 'puxadas',
          'escopo': 'costas',
          'escopo_demanda': 'upper',
          'motivo': 'vagas_insuficientes',
          'nivel': 'subregiao',
          'tipo': 'ancora_nao_cumprida',
          'treino_idx': 0,
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Remada Baixa Neutra',
            'Apoio Ajoelhado',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Desenv. Landmine',
            'Crucifixo Halteres',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'upper(4)',
    }),
  ])
# ---
# name: test_peito_3x2treinos_seed13
  list([
    dict({
      'avisos': list([
        dict({
          'escopo': 'peito',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Apoio',
            'Apoio Elevado',
            'Crossover',
            'Crucifixo Halteres',
            'Supino',
            'Supino Com Halteres',
            'crossover',
            'crucifixo',
          ]),
          'nivel': 'subregiao',
          'qtd_obtida': 2,
          'qtd_pedida': 3,
          'tipo': 'incompleta',
        }),
        dict({
          'escopo': 'rotina',
          'escopo_demanda': 'peito',
          'faltam': 1,
          'motivo': 'banco_filtrado_vazio_apos_relax',
          'nivel': 'subregiao',
          'padrao': 'empurrar_compostos',
          'subregiao': 'peito',
          'tipo': 'ancora_sem_candidatos',
          'treino_idx': 0,
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Supino Com Halteres',
            'Apoio Elevado',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'peito(3)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Apoio',
            'Crossover',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Crucifixo Halteres',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'peito(3)',
    }),
  ])
# ---
# name: test_perna_anterior_3x3treinos_seed3
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Agachamento Goblet',
            'Agach. Lateral',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Cadeira Extensora',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'perna_anterior(3)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Passada',
            'Box Jump',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Recuo Alternado',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'perna_anterior(3)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Agachamento Livre',
            'Leg Press',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Agachamento Búlgaro',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'perna_anterior(3)',
    }),
  ])
# ---
# name: test_perna_posterior_2x2treinos_seed5
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Side Clams',
            'Hip Thrust Uni.',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'perna_posterior(2)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Good Morning',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Flexão Joelhos Slide',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'perna_posterior(2)',
    }),
  ])
# ---
# name: test_template_empurrar_puxar_seed7
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Good Morning',
            'Desenvolvimento Barra',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Hiperextensão 45°',
            'Apoio Elevado',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Supino Com Halteres',
            'Flexão Joelhos Feijão',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Desenv. Halteres Uni.',
            'Pallof Press',
          ]),
        }),
        dict({
          'label': 'E',
          'nomes': list([
            'Crossover',
            'Prancha Alternada',
          ]),
        }),
        dict({
          'label': 'F',
          'nomes': list([
            'Tríceps Mergulho Banco',
            'Abdução Polia',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'empurrar_compostos(2) + empurrar_isolados(1) + ombro_composto(2) + hinge(2) + knee_flexion(1) + abduction(1) + core_isometrico(2) + triceps(1)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Lev. Terra',
            'Supino Com Anilha',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Hip Thrust',
            'Desenv. Halteres Sentado',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Apoio Ajoelhado',
            'Desloc. Lateral c/ Band',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Desenv. Landmine',
            'Hollow Hold',
          ]),
        }),
        dict({
          'label': 'E',
          'nomes': list([
            'Nordic Curl',
            'Crucifixo Halteres',
          ]),
        }),
        dict({
          'label': 'F',
          'nomes': list([
            'Dead Bug C/ Anilha',
            'Tríceps Coice Com Halter',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'empurrar_compostos(2) + empurrar_isolados(1) + ombro_composto(2) + hinge(2) + knee_flexion(1) + abduction(1) + core_isometrico(2) + triceps(1)',
    }),
  ])
# ---
# name: test_triceps_2_filtro_familia_relax_seed23
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Tríceps Coice Polia',
            'Tríceps Corda',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'triceps(2)',
    }),
  ])
# ---
# name: test_upper_3_lower_2_core_2_3treinos_seed42
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Lev. Terra',
            'Remada Aberta Trx',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Remada Baixa Aberta',
            'Canoinha',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Leg Press',
            'Hollow Hold',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Pullover Halteres',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'upper(3) + lower(2) + core(2)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Agachamento Livre',
            'Supino Com Halteres',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Good Morning',
            'Apoio Elevado',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Dead Bug C/ Anilha',
            'Crossover Sentado',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Abd Bicicleta',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'upper(3) + lower(2) + core(2)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Hip Thrust',
            'Desenv. Halteres Sentado',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Apoio',
            'V-Up',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Elevação Lateral',
            'Cadeira Extensora',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Pallof Press',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'upper(3) + lower(2) + core(2)',
    }),
  ])
# ---
# name: test_upper_3x2treinos_seed11
  list([
    dict({
      'avisos': list([
        dict({
          'chave': 'remadas',
          'escopo': 'costas',
          'escopo_demanda': 'upper',
          'motivo': 'vagas_insuficientes',
          'nivel': 'subregiao',
          'tipo': 'ancora_nao_cumprida',
          'treino_idx': 0,
        }),
        dict({
          'chave': 'remadas',
          'escopo': 'costas',
          'escopo_demanda': 'upper',
          'motivo': 'vagas_insuficientes',
          'nivel': 'subregiao',
          'tipo': 'ancora_nao_cumprida',
          'treino_idx': 1,
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Desenv. Halteres Sentado',
            'Apoio Ajoelhado',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Pullover Halteres',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'upper(3)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Barra Fixa',
            'Crossover',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Supino Com Halteres',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'upper(3)',
    }),
  ])
# ---
